test/functions/bradc/forgotReturn.good
forgotReturn.chpl:9: error: unresolved call '<<(2, void)'
