test/functions/bradc/forgotReturn.chpl
proc foo(x) {
  var retval = x + 1;
}

var y = foo(2);

writeln("y is: ", y);

var z = 2 << y;

